# MonitorSaver

./: README.md
MonitorSaver/: CMakeLists.txt
MonitorSaver/MonitorSaver/: CMakeLists.txt  resources.qrc
MonitorSaver/MonitorSaver/include/: MonitorConfig.h  backend.h  mainwindow.h
MonitorSaver/MonitorSaver/save/: save.txt
MonitorSaver/MonitorSaver/src/: backend.cpp  main.cpp  mainwindow.cpp
MonitorSaver/MonitorSaver/ui/: mainwindow.ui
